--- a/wsclient-app/pom.xml
+++ b/wsclient-app/pom.xml
@@ -15,20 +15,18 @@
 
   <properties>
     <dep.javaeeapi.version>7.0</dep.javaeeapi.version>
+    <dep.junit.version>5.0.2</dep.junit.version>
+    <dep.junit-surefire.version>1.0.2</dep.junit-surefire.version>
+    <plu.ejb.version>2.3</plu.ejb.version>
+    <plu.surefire.version>2.19.1</plu.surefire.version>
     <conf.ejbVersion>3.2</conf.ejbVersion>
   </properties>
 
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>4.12</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.hamcrest</groupId>
-      <artifactId>hamcrest-core</artifactId>
-      <version>1.3</version>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-engine</artifactId>
+      <version>${dep.junit.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -43,8 +41,20 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>${plu.surefire.version}</version>
+        <dependencies>
+          <dependency>
+            <groupId>org.junit.platform</groupId>
+            <artifactId>junit-platform-surefire-provider</artifactId>
+            <version>${dep.junit-surefire.version}</version>
+          </dependency>
+        </dependencies>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-ejb-plugin</artifactId>
-        <version>2.3</version>
+        <version>${plu.ejb.version}</version>
         <configuration>
           <ejbVersion>${conf.ejbVersion}</ejbVersion>
         </configuration>
