--- a/wsclient-app/pom.xml
+++ b/wsclient-app/pom.xml
@@ -15,6 +15,7 @@
 
   <properties>
     <dep.javaeeapi.version>7.0</dep.javaeeapi.version>
+    <dep.jmockit.version>1.38</dep.jmockit.version>
     <dep.junit.version>5.0.2</dep.junit.version>
     <dep.junit-surefire.version>1.0.2</dep.junit-surefire.version>
     <plu.ejb.version>2.3</plu.ejb.version>
@@ -23,6 +24,12 @@
   </properties>
 
   <dependencies>
+    <dependency>
+      <groupId>org.jmockit</groupId>
+      <artifactId>jmockit</artifactId>
+      <version>${dep.jmockit.version}</version>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
