--- a/wsclient-app/pom.xml
+++ b/wsclient-app/pom.xml
@@ -62,6 +62,16 @@
       <version>${dep.jersey.version}</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>javax.json</groupId>
+      <artifactId>javax.json-api</artifactId>
+      <version>1.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish</groupId>
+      <artifactId>javax.json</artifactId>
+      <version>1.1</version>
+    </dependency>
   </dependencies>
 
   <build>
