--- a/wsclient-app/pom.xml
+++ b/wsclient-app/pom.xml
@@ -63,6 +63,12 @@
       <scope>test</scope>
     </dependency>
     <dependency>
+      <groupId>org.glassfish.jersey.core</groupId>
+      <artifactId>jersey-common</artifactId>
+      <version>2.26</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>javax.json</groupId>
       <artifactId>javax.json-api</artifactId>
       <version>1.1</version>
@@ -89,7 +95,7 @@
         </dependencies>
         <configuration>
           <environmentVariables>
-            <INSTAGRAM_ACCESS_TOKEN>footoken</INSTAGRAM_ACCESS_TOKEN>
+            <INSTAGRAM_CLIENT_ID>fooclient</INSTAGRAM_CLIENT_ID>
             <INSTAGRAM_SECRET>barsecret</INSTAGRAM_SECRET>
           </environmentVariables>
         </configuration>
