--- a/wsclient-app/pom.xml
+++ b/wsclient-app/pom.xml
@@ -78,6 +78,11 @@
       <artifactId>javax.json</artifactId>
       <version>1.1</version>
     </dependency>
+    <dependency>
+      <groupId>org.eclipse</groupId>
+      <artifactId>yasson</artifactId>
+      <version>1.0</version>
+    </dependency>
   </dependencies>
 
   <build>
