--- a/wsclient-app/pom.xml
+++ b/wsclient-app/pom.xml
@@ -65,7 +65,13 @@
     <dependency>
       <groupId>org.glassfish.jersey.core</groupId>
       <artifactId>jersey-common</artifactId>
-      <version>2.26</version>
+      <version>${dep.jersey.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.jersey.media</groupId>
+      <artifactId>jersey-media-multipart</artifactId>
+      <version>${dep.jersey.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
