--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>ucl.ircflagship2</groupId>
-  <artifactId>wsclient-s3-poc</artifactId>
+  <artifactId>wsclient-cloudstore-poc</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>pom</packaging>
 
