--- a/wsclient-main/pom.xml
+++ b/wsclient-main/pom.xml
@@ -4,7 +4,7 @@
 
   <parent>
     <groupId>ucl.ircflagship2</groupId>
-    <artifactId>wsclient-s3-poc</artifactId>
+    <artifactId>wsclient-cloudstore-poc</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
 
