--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <plu.tidy.version>1.1.0</plu.tidy.version>
     <plu.asciidoctor.version>1.5.6</plu.asciidoctor.version>
+    <plu.asciidoctordiagram.version>1.5.4.1</plu.asciidoctordiagram.version>
     <plu.clean.version>3.0.0</plu.clean.version>
   </properties>
 
@@ -53,15 +54,27 @@
         <groupId>org.asciidoctor</groupId>
         <artifactId>asciidoctor-maven-plugin</artifactId>
         <version>${plu.asciidoctor.version}</version>
+        <dependencies>
+          <dependency>
+            <groupId>org.asciidoctor</groupId>
+            <artifactId>asciidoctorj-diagram</artifactId>
+            <version>${plu.asciidoctordiagram.version}</version>
+          </dependency>
+        </dependencies>
         <configuration>
           <backend>html5</backend>
           <outputDirectory>docs</outputDirectory>
           <preserveDirectories>true</preserveDirectories>
           <embedAssets>true</embedAssets>
+          <requires>
+            <require>asciidoctor-diagram</require>
+          </requires>
           <attributes>
             <project-version>${project.version}</project-version>
             <sectnums>true</sectnums>
             <stylesheet>github.css</stylesheet>
+            <imagesdir>img</imagesdir>
+            <imagesoutdir>img</imagesoutdir>
           </attributes>
         </configuration>
         <executions>
